# handout_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  .env.prod  Dockerfile  conftest.py  default.conf  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  schema.yml
backend/compose/local/: Dockerfile
backend/compose/production/: Dockerfile
backend/core/: settings.py  urls.py  wsgi.py
backend/core/core/: settings.py
backend/core/settings/: __init__.py  base.py  local.py  production.py  test.py
backend/feedback/: admin.py  apps.py  models.py  urls.py
backend/feedback/admin/: __init__.py  comment_admin.py  like_admin.py
backend/feedback/migrations/: 0001_initial.py  0002_comment_unique_email_handout_comment.py  0003_remove_comment_unique_email_handout_comment.py
backend/feedback/models/: __init__.py  comment.py  like.py
backend/feedback/serializer/: __init__.py  comment.py  like.py
backend/feedback/tests/: conftest.py  test_comment.py  test_like.py
backend/feedback/views/: __init__.py  comment.py  like.py
backend/handout/: admin.py  apps.py  models.py  urls.py
backend/handout/admin/: __init__.py  author_admin.py  category_admin.py  handout_admin.py  tag_admin.py
backend/handout/migrations/: 0001_initial.py  0002_alter_handout_category_alter_handout_tag.py  0003_alter_author_options_and_more.py  (+2 more)
backend/requirements/: base.txt  local.txt
backend/users/: admin.py  apps.py  models.py
backend/utils/: base_model.py
(+26 files in other folders)
