[tool.poetry]
name = "handout-ir"
version = "0.1.0"
description = "handout for students."
authors = ["mh.malekian78@gmail.com"]

[tool.poetry.dependencies]
python = "3.11"
asgiref = "3.8.1"
Django = "4.2"
django-environ = "0.11.2"
psycopg2-binary = "2.9.9"
python-decouple = "3.8"
sqlparse = "0.5.0"
typing_extensions = "4.12.2"
tzdata = "2024.1"
pre-commit = "3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
